--- a/berkeley_311_calls.ipynb
+++ b/berkeley_311_calls.ipynb
@@ -16,8 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import requests\n",
-    "from datetime import datetime"
+    "import requests"
    ]
   },
   {
@@ -33,24 +32,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49f12b3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get today's date and format it to YYYYMMDD\n",
-    "todays_date = datetime.now().strftime('%Y%m%d')\n",
-    "todays_date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "40c15069",
    "metadata": {},
    "outputs": [],
    "source": [
     "# what we're going to call the file we download\n",
-    "download_file_name = f'berkeley_311_{ todays_date }.csv'\n",
+    "download_file_name = 'berkeley_311.csv'\n",
     "download_file_name"
    ]
   },
@@ -66,6 +53,14 @@
     "r = requests.get(url, allow_redirects=False)\n",
     "open(download_file_name, 'wb').write(r.content)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ca59c07-4625-4c02-85b9-a7924333a2b7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
