simplify even more

--- a/berkeley_311_calls.ipynb
+++ b/berkeley_311_calls.ipynb
@@ -32,26 +32,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c15069",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# what we're going to call the file we download\n",
-    "download_file_name = 'berkeley_311.csv'\n",
-    "download_file_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "77423e30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# download the file\n",
     "url = 'https://data.cityofberkeley.info/api/views/bscu-qpbu/rows.csv?accessType=DOWNLOAD'\n",
     "r = requests.get(url, allow_redirects=False)\n",
-    "open(download_file_name, 'wb').write(r.content)"
+    "\n",
+    "# write the content of the request into a file called `berkeley_311.csv`\n",
+    "open('berkeley_311.csv', 'wb').write(r.content)"
    ]
   },
   {
