--- a/oakland_311_calls.ipynb
+++ b/oakland_311_calls.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3387ecf",
+   "id": "11357a90-2cd0-4555-8c8f-a3ce79a90d29",
    "metadata": {},
    "source": [
-    "# Berkeley 311 calls"
+    "# Oakland 311 calls\n",
+    "\n",
+    "This notebook is part of Assignment #6."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89f06b53",
+   "id": "0c7481a1-b532-4827-a3d3-525ee5d9b553",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,26 +24,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0328865",
+   "id": "697f51c6-b3ac-486e-bc99-8be67ab07d6f",
    "metadata": {},
    "source": [
     "## Download data\n",
     "\n",
-    "Download [311 call data](https://data.cityofberkeley.info/311/311-Cases-COB/bscu-qpbu) from the City of Berkeley's Open Data Portal. "
+    "Download [311 call data](https://data.oaklandca.gov/Infrastructure/Service-requests-received-by-the-Oakland-Call-Cent/quth-gb8e) from the City of Oakland's Open Data Portal. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77423e30",
+   "id": "6fec60f3-f48f-4e5e-b4a2-44fc4e568e18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://data.cityofberkeley.info/api/views/bscu-qpbu/rows.csv?accessType=DOWNLOAD'\n",
+    "url = 'https://data.oaklandca.gov/api/views/quth-gb8e/rows.csv?accessType=DOWNLOAD'\n",
     "r = requests.get(url, allow_redirects=False)\n",
     "\n",
-    "# write the content of the request into a file called `berkeley_311.csv`\n",
-    "open('berkeley_311.csv', 'wb').write(r.content)"
+    "# write the content of the request into a file called `oakland_311.csv`\n",
+    "open('oakland_311.csv', 'wb').write(r.content)"
    ]
   }
  ],
